fix immutable Collection and delete unused Format Date impl on User Mapper