@@ -10,10 +10,9 @@ import com.sprint.be_java_hisp_w23_g04.entity.Post;
 import com.sprint.be_java_hisp_w23_g04.entity.Product;
 import com.sprint.be_java_hisp_w23_g04.entity.User;
 
-import java.time.LocalDate;
-import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class UserMapper {
 
@@ -26,17 +25,17 @@ public class UserMapper {
             followed = new ArrayList<>();
         }
         else{
-            followed = userDto.getFollowed().stream().map(p -> new User(p.getId(), p.getName())).toList();
+            followed = userDto.getFollowed().stream().map(p -> new User(p.getId(), p.getName())).collect(Collectors.toList());
         }
 
         if(userDto.getFollowers() == null){
             followers = new ArrayList<>();
         }
         else{
-            followers = userDto.getFollowers().stream().map(p -> new User(p.getId(), p.getName())).toList();
+            followers = userDto.getFollowers().stream().map(p -> new User(p.getId(), p.getName())).collect(Collectors.toList());
         }
 
-        List<Post> posts = postsDto.stream().map(p -> new Post(p.getPostId(), p.getDate(), mapProduct(p.getProduct()), p.getCategory(), p.getPrice())).toList();
+        List<Post> posts = postsDto.stream().map(p -> new Post(p.getPostId(), p.getDate(), mapProduct(p.getProduct()), p.getCategory(), p.getPrice())).collect(Collectors.toList());
         return new User(userDto.getUser_id(), userDto.getName(), posts, followed, followers);
     }
 
@@ -69,8 +68,4 @@ public class UserMapper {
         return new UserFollowDTO(user.getId(), user.getName());
     }
 
-    private static LocalDate convertDateFromString(String stringDate) {
-        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd-MM-yyyy");
-        return LocalDate.parse(stringDate, formatter);
-    }
 }
